clusters/main/kubernetes/system/networkpolicies/app/registry-allow-ingress-vscode.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-vscode
  namespace: registry
spec:
  podSelector:
    matchLabels:
      app: docker-registry
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vscode
      ports:
        - protocol: TCP
          port: 5000
